--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,7 +3,14 @@ name: My pipeline for DevOps Crash Course
 on: 
   push:
     branches: [master]
-
+  workflow_dispatch:
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 jobs:
   ci_pipline:
     runs-on: ubuntu-latest
@@ -24,9 +31,6 @@ jobs:
       uses: actions/upload-pages-artifact@v2
   cd_pipeline:
     needs: [ci_pipline]
-    permissions:
-      pages: write      
-      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
